--- a/dashboard-client/src/app/user-profile/user-profile.component.html
+++ b/dashboard-client/src/app/user-profile/user-profile.component.html
@@ -96,8 +96,8 @@
                       <p class="card-description">
                           Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
                       </p>
-                      <a href="javascript:void(0)" class="btn btn-danger btn-round" (click)="onClick()">Follow</a>
-                      <p>asd</p>
+                      <button class="btn btn-danger btn-round" (click)="onClick()">Follow</button>
+                      <p>{{student}}</p>
                   </div>
               </div>
           </div>
